# protosuit-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.yaml  protosuit_engine.py  requirements.txt  setup_displays.sh  test.py
ProtosuitDevBoard/: Aliexpress.bak  Aliexpress.kicad_sym  ProtosuitDevBoard.kicad_pcb  ProtosuitDevBoard.kicad_prl  ProtosuitDevBoard.kicad_pro  ProtosuitDevBoard.kicad_sch  fp-info-cache
ProtosuitDevBoard/Aliexpress.pretty/: DC_DC_5V_5A_TPS54X60.kicad_mod  DC_DC_5V_8A_CRDC2580.kicad_mod
ansible/: README.md  ansible.cfg  build_deploy_fin_engine.yml  display.yml  engine_build_config.yml  engine_fin.yml  engine_rust_config.yml  hub_server.yml  networking.yml  site.yml
audiobridge/: audio_device_manager.py  audiobridge.py
bluetoothbridge/: __init__.py  bluetoothbridge.py
castbridge/: __init__.py  castbridge.py  lyrics.py  spotify_event.sh
cmake/: armhf-toolchain.cmake
config/: loader.py  typed_config.py
controllerbridge/: __init__.py  controllerbridge.py
docs/: firmware.md  mqtt-api.md  psp-controller.md
engine/: README.md  display_manager.py  mqtt_handler.py
esp32/: build_and_upload.sh
espbridge/: espbridge.py
firmware/: README.md
hardware/: README.md
launcher/: __init__.py  audio_device_manager.py  launcher.py
networkingbridge/: __init__.py  networkingbridge.py  oui_lookup.py
psp-controller/: .gitignore  EBOOT.PBP  Makefile  README.md  config.h  config.txt.example  setup-sdk.sh
renderer/: renderer.py  shader_compiler.py
scripts/: ap-setup.sh  routing-teardown.sh  ytdl.sh
shaders/: idle.glsl
src/: .gitignore  Makefile  debug_scene.c  doom_scene.c  embedded_assets.c  embedded_assets.h  idle_scene.c  main.c  main.rs  modules.rs  scenes.h  sdl_manager.rs  transitions.c
tests/: test_mqtt_inputs.sh
utils/: bluez_dbus.py  logger.py  mqtt_client.py  notifications.py  program_helper.py  service_controller.py  x11_mirror.py
web/: server.py
(+322 files in other folders)
