[package]
name = "protosuit-engine-fin"
version = "0.1.0"
edition = "2021"
authors = ["lululombard"]
description = "A Rust-based SDL application for Protogen fursuit fins"

[dependencies]
sdl2 = { version = "0.37", default-features = false, features = ["bundled", "ttf", "gfx"] }
x11rb = { version = "0.12", features = ["allow-unsafe-code"] }
rumqttc = "0.23"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
dashmap = "5.5"
systemstat = "0.2"
local-ip-address = "0.5"
hostname = "0.3"
lazy_static = "1.4"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
